--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -7,19 +7,22 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite --host"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.12.2",
     "flowbite-react": "^0.12.6",
     "react": "^19.1.0",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
+    "recharts": "^3.2.1",
     "tailwindcss": "^4.1.11",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
